code reformat on RemoteBuildConfiguration